<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fag_home"
        android:iconTint="@color/orange_text"
        android:icon="@drawable/ic_input"
        android:title="@string/input" />

    <item
        android:id="@+id/fag_calender"
        android:iconTint="@color/orange_text"
        android:icon="@drawable/ic_calendar_month"
        android:title="@string/calendar" />

    <item
        android:id="@+id/fag_report"
        android:iconTint="@color/orange_text"
        android:icon="@drawable/ic_report"
        android:title="@string/report" />

    <item
        android:id="@+id/fag_profile"
        android:iconTint="@color/orange_text"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>