<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/item_drawer_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/orange"
        android:title="@string/home" />
    <item
        android:id="@+id/item_drawer_calendar"
        android:icon="@drawable/ic_calendar"
        android:iconTint="@color/orange"
        android:title="@string/calendar" />
    <item
        android:id="@+id/item_drawer_report"
        android:icon="@drawable/ic_report"
        android:iconTint="@color/orange"
        android:title="@string/report" />
    <group>
       <item android:title="Xuất dữ liệu">
           <menu>
               <item
                   android:id="@+id/item_drawer_pdf"
                   android:icon="@drawable/ic_pdf"
                   android:iconTint="@color/orange"
                   android:title="Xuất dữ liệu Pdf" />
               <item
                   android:id="@+id/item_drawer_excel"
                   android:icon="@drawable/ic_excel"
                   android:iconTint="@color/orange"
                   android:title="Xuất dữ liệu excel" />
           </menu>
       </item>
    </group>
    <group>
        <item android:title="Khác">
            <menu>
                <item
                    android:id="@+id/item_drawer_share"
                    android:icon="@drawable/ic_share"
                    android:iconTint="@color/orange"
                    android:title="Chia sẻ" />
                <item
                    android:id="@+id/item_drawer_infor"
                    android:icon="@drawable/ic_information"
                    android:iconTint="@color/orange"
                    android:title="Thông tin ứng dụng" />
                <item android:id="@+id/item_drawer_buy"
                    android:icon="@drawable/ic_premium"
                    android:title="Loại bỏ quảng cáo"/>
            </menu>
        </item>
    </group>
</menu>